# todo-bmad

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml
.claude/: settings.json  settings.local.json
.github/workflows/: ci.yml
_bmad-output/implementation-artifacts/: 1-1-monorepo-scaffold-local-development-stack.md  1-2-ci-pipeline.md  2-1-backend-todo-api-database.md  2-2-todo-list-view.md  2-3-create-todo.md  2-4-complete-delete-todo.md  3-1-loading-error-states.md  3-2-responsive-layout-mobile-experience.md  3-3-theme-toggle-accessibility.md  4-1-non-root-container-users.md  4-2-backend-health-endpoint.md  4-3-docker-compose-health-checks-service-dependencies.md  5-1-test-coverage-analysis-improvement.md  5-2-performance-validation.md  5-3-accessibility-audit.md  5-4-security-review-findings-report.md  (+5 more)
backend/: .dockerignore  Dockerfile  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 36e2fede41c6_create_todo_table.py
backend/app/: database.py  main.py  models.py  settings.py
backend/app/routes/: todos.py
backend/tests/: conftest.py  test_main.py
backend/tests/routes/: test_todos.py
docs/: accessibility-report.md  prd-validation-report.md  prd.md  project-log.md  security-findings-report.md
e2e/: biome.json  helpers.ts  package-lock.json  package.json  playwright.config.ts
frontend/: .dockerignore  Caddyfile  Dockerfile  biome.json  index.html  orval.config.ts  package-lock.json  package.json  vite.config.ts
proxy/: Caddyfile  Dockerfile
(+52 files in other folders)
